//	This file was auto-generated by Protomak. Do not edit!


package edu.vanderbilt.isis.meta;

message AccelerationType {
	required string Units = 1;
	required double x = 3;
	required double y = 4;
	required double z = 5;
}

message AnalysesType {
	repeated BallisticType Ballistic = 1;
	repeated FEAType FEA = 2;
	repeated InterferenceType Interference = 3;
	repeated ToleranceType Tolerance = 4;
}

message AnalysisComponentsType {
	repeated ComponentType Component = 1;
}

message AnalysisConstraintType {
	optional BallType Ball = 1;
	optional DisplacementType Displacement = 2;
	optional GeometryType Geometry = 3;
	optional PinType Pin = 4;
}

message AnalysisConstraintsType {
	repeated AnalysisConstraintType AnalysisConstraint = 1;
}

message AssembliesType {
	repeated AssemblyType Assembly = 1;
	optional DataExchangeType DataExchange = 2;
	repeated MaterialsType Materials = 3;
	optional UnassembledComponentsType UnassembledComponents = 4;
	repeated AssembliesType Assemblies = 5;
	required string VersionInfo = 6;
}

message AssemblyType {
	optional AnalysesType Analyses = 1;
	optional CADComponentType CADComponent = 2;
	optional ComputationsType Computations = 3;
	required PropertiesType Properties = 4;
	required string ConfigurationID = 5;
}

message AxialDisplacementType {
	required string Property = 1;
}

message AxialRotationType {
	required string Property = 1;
}

message BallType {
}

message BallisticType {
	optional ReferencePlaneType ReferencePlane = 1;
	optional ShotlinesType Shotlines = 2;
	required string AnalysisID = 3;
}

message BoundingBoxType {
	required string ComponentID = 1;
	required string MetricID = 2;
	required string RequestedValueType = 3;
}

message CADComponentType {
	repeated CADComponentType CADComponent = 1;
	repeated ConstraintType Constraint = 2;
	optional KinematicConnectionsType KinematicConnections = 3;
	optional ParametricParametersType ParametricParameters = 4;
	repeated ConnectorType Connectors = 14;
	repeated ConnectorDatumType Datums = 15;
	optional string ComponentID = 5;
	optional string AvmComponentID = 11;
	optional string MaterialID = 6;
	optional string Name = 7;
	optional string SpecialInstruction = 8;
	optional bool Standalone = 9;
	optional string Type = 10;
	optional string CADModelID = 12;
	optional string DisplayName = 13;
}

message CADParameterType {
	optional UnitsType Units = 1;
	required string Name = 2;
	required string Type = 3;
	required string Value = 4;
}

message CenterOfGravityType {
	required string ComponentID = 1;
	required string MetricID = 2;
	required string RequestedValueType = 3;
}

message ComponentType {
	optional MetricsType Metrics = 1;
	required string ComponentID = 2;
	required bool InfiniteCycle = 3;
}

message ComputationsType {
	repeated BoundingBoxType BoundingBox = 1;
	repeated CenterOfGravityType CenterOfGravity = 2;
	repeated MassType Mass = 3;
	repeated PointCoordinatesType PointCoordinates = 4;
}

message ConditionType {
	required string Name = 1;
	required string Units = 2;
	required double Value = 3;
}

message ConditionsType {
	repeated ConditionType Condition = 1;
}

message ConnectorDatumType
{
	enum AlignType {
      MATE = 0;
      ALIGN = 1;
    }
	optional AlignType Alignment = 3;
	optional string ID = 1;
	required string DisplayName = 2;
}

message ConnectorType {
	required string ID = 1;
	required string DisplayName = 2;
	repeated ConnectorDatumType Datums = 3;
}

message ConstraintFeatureType {	
	required string ComponentID = 1;
	required string FeatureName = 2;
	required string FeatureOrientationType = 3;
}

message ConstraintOffsetType {
	optional UnitsType Units = 1;
	required string OffsetAlignmentType = 2;
	required double Value = 3;
}

message ConstraintType {
	repeated PairType Pair = 1;
	optional string ComponentID = 2;
}

message DataExchangeType {
	repeated STEPFormatType STEPFormat = 1;
}

message DisplacementType {
	required RotationType Rotation = 1;
	required TranslationType Translation = 2;
}

message FEAType {
	optional AnalysisComponentsType AnalysisComponents = 1;
	optional AnalysisConstraintsType AnalysisConstraints = 2;
	optional ConditionsType Conditions = 3;
	optional LoadsType Loads = 4;
	optional PartInterfacesType PartInterfaces = 5;
	required SolversType Solvers = 6;
	repeated SurfaceTreatmentsType SurfaceTreatments = 7;
	required string AnalysisID = 8;
	required string Type = 9;
}

message FeatureType {
	required string ComponentID = 1;
	required string Name = 2;
}

message FeaturesType {
	repeated FeatureType Feature = 1;
	required string FeatureGeometryType = 2;
	required string FeatureID = 3;
	required string FeatureInterfaceType = 4;
	required string GeometryType = 5;
	required string PrimaryGeometryQualifier = 6;
	required string SecondaryGeometryQualifier = 7;
}

message FixedType {
	repeated KinematicFeatureType KinematicFeature = 1;
	required double CFM = 2;
	required string ConnectedComponentID = 3;
	required string ConnectionID = 4;
	required double ERP = 5;
	required string FeatureInterfaceType = 6;
}

message ForceMomentType {
	required ForceType Force = 1;
	required MomentType Moment = 2;
}

message ForceType {
	required string Units = 1;
	required double x = 3;
	required double y = 4;
	required double z = 5;
}

message GeometryType {
	repeated FeaturesType Features = 1;
	repeated SetOperationType SetOperation = 2;
}

message InterferenceType {
	required string AnalysisID = 1;
}

message KinematicConnectionsType {
	repeated FixedType Fixed = 1;
	repeated PrismaticType Prismatic = 2;
	repeated RevoluteType Revolute = 3;
	repeated SphericalType Spherical = 4;
}

message KinematicFeatureType {
	required string ComponentID = 1;
	required string DatumName = 2;
	required string FeatureGeometryType = 3;
}

message LoadType {
	optional AccelerationType Acceleration = 1;
	optional ForceMomentType ForceMoment = 2;
	optional GeometryType Geometry = 3;
	optional PressureType Pressure = 4;
}

message LoadsType {
	repeated LoadType Load = 1;
}

message MassType {
	required string ComponentID = 1;
	required string MetricID = 2;
	required string RequestedValueType = 3;
}

message MaterialPropertyType {
	required string PropertyName = 1;
	required string Units = 2;
	required double Value = 3;
}

message MaterialType {
	repeated MaterialPropertyType MaterialProperty = 1;
	required string MaterialID = 2;
	required string MaterialName = 3;
	required string Type = 4;
}

message MaterialsType {
	repeated MaterialType Material = 1;
}

message MetricType {
	required string ID = 1;
	required string Type = 2;
}

message MetricsType {
	repeated MetricType Metric = 1;
}

message MomentType {
	required string Units = 1;
	required double x = 3;
	required double y = 4;
	required double z = 5;
}

message PairType {
	required ConstraintFeatureType ConstraintFeatureA = 1;
	required ConstraintFeatureType ConstraintFeatureB = 2;
	optional ConstraintOffsetType ConstraintOffset = 3;
	required string FeatureAlignmentType = 4;
	required string FeatureGeometryType = 5;
	required string FeatureInterfaceType = 6;
}

message ParametricParametersType {
	repeated CADParameterType CADParameter = 1;
	optional string ComponentID = 2;
}

message PartInterfaceType {
	required string ComponentID_1 = 1;
	required string ComponentID_2 = 2;
	required string Type = 3;
}

message PartInterfacesType {
	repeated PartInterfaceType PartInterface = 1;
}

message PinType {
	required AxialDisplacementType AxialDisplacement = 1;
	required AxialRotationType AxialRotation = 2;
}

message PointCoordinatesType {
	required string ComponentID = 1;
	required string FeatureDatumName = 2;
	required string MetricID = 3;
	required string RequestedValueType = 4;
}

message PressureType {
	required string Units = 1;
	required double Value = 2;
}

message PrismaticType {
	repeated KinematicFeatureType KinematicFeature = 1;
	required double CFM = 2;
	required string ConnectedComponentID = 3;
	required string ConnectionID = 4;
	required double ERP = 5;
	required string FeatureInterfaceType = 6;
}

message PropertiesType {
	optional UnitsType Units = 1;
}

message ReferencePlaneType {
	required string Type = 1;
}

message RevoluteType {
	repeated KinematicFeatureType KinematicFeature = 1;
	required double CFM = 2;
	required string ConnectedComponentID = 3;
	required string ConnectionID = 4;
	required double ERP = 5;
	required string FeatureInterfaceType = 6;
}

message RotationType {
	required string Units = 1;
	required string x = 3;
	required string y = 4;
	required string z = 5;
}

message STEPFormatType {
	required string Name = 1;
}

message SetOperationType {
	required string FeatureID = 1;
	required string Type = 2;
}

message ShotlineType {
	required double Azimuth = 1;
	required string BallisticThreatRef = 2;
	required string ComponentID = 3;
	required string DatumPoint = 4;
	required double Elevation = 5;
}

message ShotlinesType {
	repeated ShotlineType Shotline = 1;
}

message SolverType {
	required string ElementShapeType = 1;
	required string MeshType = 2;
	required string ShellElementType = 3;
	required string Type = 4;
}

message SolversType {
	repeated SolverType Solver = 1;
}

message SphericalType {
	repeated KinematicFeatureType KinematicFeature = 1;
	required double CFM = 2;
	required string ConnectedComponentID = 3;
	required string ConnectionID = 4;
	required double ERP = 5;
	required string FeatureInterfaceType = 6;
}

message SurfaceTreatmentType {
	optional GeometryType Geometry = 1;
	optional string AdjoiningParts = 2;
}

message SurfaceTreatmentsType {
	repeated SurfaceTreatmentType SurfaceTreatment = 1;
}

message ToleranceType {
	required string AnalysisID = 1;
}

message TranslationType {
	required string Units = 1;
	required string x = 3;
	required string y = 4;
	required string z = 5;
}

message UnassembledComponentsType {
	repeated CADComponentType CADComponent = 1;
}

message UnitsType {
	required string Value = 1;
}

